fix hardcoded dotfiles path references

--- a/shell/.config/tmuxp/misc.yaml
+++ b/shell/.config/tmuxp/misc.yaml
@@ -3,6 +3,6 @@ windows:
 - window_name: moc
   panes: ['mocp']
 - window_name: dot
-  start_directory: ~/src/env.dotfiles
+  start_directory: ~/src/env/dotfiles
   panes:
   - shell_command: tmux select-window -t dot; clear
