--- a/devel/.local/share/cargo/config
+++ b/devel/.local/share/cargo/config
@@ -2,7 +2,8 @@
 rustc-wrapper = "sccache"
 
 [target.x86_64-unknown-linux-gnu]
-rustflags = ["-C", "link-args=-fuse-ld=lld", "-C", "target-cpu=native"]
+linker = "/usr/bin/clang"
+rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold", "-C", "target-cpu=native"]
 
 # cross compiling for linux@android
 [target.armv7-unknown-linux-musleabihf]
