fix nginx sites

--- a/_nodes/seedbox/etc/nginx/sites-enabled/public.flood.conf
+++ b/_nodes/seedbox/etc/nginx/sites-enabled/public.flood.conf
@@ -4,7 +4,7 @@ server {
   access_log /var/log/nginx/public.flood.out.log;
   error_log /var/log/nginx/public.flood.err.log;
 
-  root /mnt/media/public;
+  root /mnt/seedbox/public;
 
   location / {
     if (-f $request_filename) {
@@ -21,10 +21,6 @@ server {
     fancyindex_css_href /.fancyindex/style.css;
   }
 
-  location ~ ^/.fancyindex/(.*) {
-    auth_basic off;
-  }
-
   listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/flood.getbetter.ro-0003/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/flood.getbetter.ro-0003/privkey.pem; # managed by Certbot
@@ -33,6 +29,7 @@ server {
   if ($scheme != "https") {
     return 301 https://$host$request_uri;
   } # managed by Certbot
+
 }
 
 server {
