--- a/_nodes/seedbox/etc/nginx/nginx.conf
+++ b/_nodes/seedbox/etc/nginx/nginx.conf
@@ -1,6 +1,7 @@
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
   worker_connections 768;
@@ -17,7 +18,7 @@ http {
   tcp_nodelay on;
   keepalive_timeout 65;
   types_hash_max_size 2048;
-  # server_tokens off;
+  server_tokens off;
 
   server_names_hash_bucket_size 64;
   # server_name_in_redirect off;
@@ -49,7 +50,17 @@ http {
   ##
   # Virtual Host Configs
   ##
+  server {
+    listen 443 ssl default;
+
+    ssl_certificate /etc/letsencrypt/live/flood.getbetter.ro-0003/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/flood.getbetter.ro-0003/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+
+    return 404;
+  }
 
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*.conf;
 }
+
