reconfigure rtorrent + flood

--- a/_nodes/seedbox/etc/supervisor/conf.d/flood.conf
+++ b/_nodes/seedbox/etc/supervisor/conf.d/flood.conf
@@ -1,13 +1,13 @@
 [program:flood]
-command=/usr/bin/node ./server/bin/www
-directory=/home/ubuntu/flood
+command=/usr/local/bin/flood -d /home/karelian/flood/ --auth default --rthost 127.0.0.1 --rtport 5000
+directory=/home/karelian/flood
 process_name=%(program_name)s
 autostart=true
 autorestart=true
 stopsignal=TERM
-user=ubuntu
+user=karelian
 redirect_stderr=false
-stdout_logfile=/home/ubuntu/flood.log
-stderr_logfile=/home/ubuntu/flood.log
+stdout_logfile=/home/karelian/flood/out.log
+stderr_logfile=/home/karelian/flood/err.log
 
 
