--- a/_nodes/seedbox/etc/supervisor/conf.d/rtorrent.conf
+++ b/_nodes/seedbox/etc/supervisor/conf.d/rtorrent.conf
@@ -1,14 +1,13 @@
 [program:rtorrent]
-command=/home/ubuntu/bin/no-lock-r.sh
-directory=/home/ubuntu
+command=/home/karelian/bin/no-lock-r.sh
+directory=/home/karelian/rtorrent
 process_name=%(program_name)s
 autostart=true
 autorestart=true
-stopsignal=INT
-environment=TERM="screen",HOME="/home/ubuntu",USER="ubuntu"
-user=ubuntu
-#stdout_logfile=/home/ubuntu/rtorrent.log
-stdout_logfile=/dev/null
-stderr_logfile=/home/ubuntu/rtorrent.err
+stopsignal=TERM
+environment=TERM="screen",HOME="/home/karelian",USER="karelian"
+user=karelian
+stdout_logfile=/home/karelian/rtorrent/out.log
+stderr_logfile=/home/karelian/rtorrent/err.log
 
 
