🫰 (nvidia) start X *after* the nvidia drivers load

--- a/_nodes/ufo/etc/mkinitcpio.conf
+++ b/_nodes/ufo/etc/mkinitcpio.conf
@@ -1,4 +1,4 @@
-MODULES=(i915 btrfs)
+MODULES=(nvidia nvidia_modeset nvidia_uvm nvidia_drm i915 btrfs)
 BINARIES=()
 FILES=()
 HOOKS=(base consolefont udev autodetect modconf block lvm2 filesystems resume keyboard)
