configure containerd registries

--- a/_arch/etc/containers/registries.conf
+++ b/_arch/etc/containers/registries.conf
@@ -8,3 +8,21 @@ unqualified-search-registries = ["docker.io"]
   blocked = false
   mirror-by-digest-only = true
   prefix = ""
+[[registry]]
+  location = "registry.sys.svc.k8s.local"
+  insecure = true
+  blocked = false
+  mirror-by-digest-only = true
+  prefix = ""
+[[registry]]
+  prefix = "registry-np.storage-system.svc.k8s.local"
+  location = "registry-np.storage-system.svc.k8s.local"
+  insecure = true
+  blocked = false
+  mirror-by-digest-only = true
+[[registry]]
+  location = "hub-cache.storage-system.svc.k8s.local"
+  insecure = true
+  blocked = false
+  mirror-by-digest-only = true
+  prefix = ""
