no longer holding intellij, but do hold wine

--- a/_arch/etc/pacman.conf
+++ b/_arch/etc/pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg   = git-test-git intellij-idea-ultimate-edition-jre intellij-idea-ultimate-edition
+IgnorePkg   = git-test-git wine
 #IgnoreGroup =
 
 #NoUpgrade   =
