delay espanso startup until startup-i3 is done

--- a/misc/.config/systemd/user/espanso.service.d/override.conf
+++ b/misc/.config/systemd/user/espanso.service.d/override.conf
@@ -1,5 +1,5 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/bash -c "until pidof Xorg; do sleep 1; done; /usr/bin/espanso launcher"
+ExecStart=/usr/bin/bash -c "until pgrep -f startup-i3; do sleep 1; done; /usr/bin/espanso launcher"
 ExecStartPre=/usr/bin/find %h/.config/espanso/match -name "tomb_*" -xtype l -delete
 Environment="PATH=%h/bin:/usr/local/bin:/:/usr/bin"
