--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -11,7 +11,7 @@ floating_modifier $mod
 for_window [class="Pinentry"] floating enable
 for_window [class="^jetbrains-.+"][window_type=dialog] focus
 for_window [title="^rofi-scratch:" ] floating enable
-for_window [title="^rofi-scratch:" ] border 1px
+for_window [title="^rofi-scratch:" ] border 1 pixel
 assign [class="obsidian"] 7
 
 # terminals
