boot up roon UI on ,roon-on since we always do it

--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -15,6 +15,7 @@ for_window [title="^rofi-scratch:"] border pixel 1
 for_window [class="Alacritty"] border pixel 1
 assign [class="obsidian"] 7
 assign [class="Zotero"] 7
+assign [class="roon.exe"] 7
 smart_borders on
 
 # terminals
