--- a/_nodes/ufo/etc/X11/xorg.conf.d/10-nvidia-drm-outputclass.conf
+++ b/_nodes/ufo/etc/X11/xorg.conf.d/10-nvidia-drm-outputclass.conf
@@ -10,6 +10,7 @@ Section "OutputClass"
     Driver "nvidia"
     Option "AllowEmptyInitialConfiguration"
     Option "PrimaryGPU" "yes"
+    Option "UseNvKmsCompositionPipeline" "false"
     ModulePath "/usr/lib/nvidia/xorg"
     ModulePath "/usr/lib/xorg/modules"
 EndSection    
