move i3 configs under XDG_

--- a/wm/.config/i3/i3blocks.conf
+++ b/wm/.config/i3/i3blocks.conf
@@ -47,7 +47,7 @@ interval=3
 [separator]
 
 [memory]
-command=~/.i3/extra_blocks/blocks.sh 3
+command=$XDG_CONFIG_HOME/i3/extra_blocks/blocks.sh 3
 interval=2
 
 [separator]
