move i3 configs under XDG_

--- a/wm/.config/i3/i3blocks.conf
+++ b/wm/.config/i3/i3blocks.conf
@@ -1,6 +1,6 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=~/.i3/blocks/$BLOCK_NAME
+command=$XDG_CONFIG_HOME/i3/blocks/$BLOCK_NAME
 full_text=
 separator=true
 separator_block_width=25
