--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -148,7 +148,7 @@ bindsym $mod+Ctrl+l resize grow width 1 px or 1 ppt
 
 # i3blocks / i3bar
 bar {
-    status_command i3blocks -c ~/.i3/i3blocks.conf
+    status_command i3blocks -c $XDG_CONFIG_HOME/i3/i3blocks.conf
     i3bar_command i3bar -t
     separator_symbol "·"
 
@@ -178,7 +178,7 @@ bar {
 }
 
 # locker
-set $Locker ~/.i3/locker.sh
+set $Locker $XDG_CONFIG_HOME/i3/locker.sh
 exec --no-startup-id $Locker -c 000000
 exec --no-startup-id xautolock -corners 0-00 -cornersize 150 -time 10 -locker "$Locker"
 
