--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -183,7 +183,7 @@ exec --no-startup-id $Locker -c 000000
 exec --no-startup-id xautolock -corners 0-00 -cornersize 150 -time 10 -locker "$Locker"
 
 # startup
-exec --no-startup-id ~/bin/startup-i3
+exec_always --no-startup-id ~/bin/startup-i3
 
 # no title bars
 new_window pixel 1
