--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -33,12 +33,12 @@ bindsym $mod+Shift+q kill
 
 # rofi, rofi, rofi
 bindsym $alt+space exec --no-startup-id rofi -show combi
-bindsym $mod+backslash exec --no-startup-id ~/bin/rofi-scratch
+bindsym $mod+space exec --no-startup-id ~/bin/rofi-scratch
 bindsym $mod+u exec --no-startup-id rofi -show cht -modi cht:cht-rofi -matching prefix
 bindsym $mod+Shift+u exec --no-startup-id cht-query
 
 # focus on a specific task
-bindsym $mod+space exec --no-startup-id ~/.i3/focus.sh
+bindsym $mod+backslash exec --no-startup-id $XDG_CONFIG_HOME/i3/focus.sh
 
 # change focus
 bindsym $mod+h focus left
