check in the obsidian screenshot workflow

--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -208,8 +208,9 @@ bindsym XF86AudioMute        exec --no-startup-id i3-volume mute
 
 # screenshots
 bindsym 0xff61 exec ~/bin/screenshot
-bindsym Shift+0xff61 exec "~/bin/,snap"
 bindsym XF86LaunchA exec ~/bin/screenshot
+bindsym Shift+0xff61 exec "~/bin/screenshot-obsidian"
+bindsym Shift+XF86LaunchA exec "~/bin/screenshot-obsidian"
 
 # system menu
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
