--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -183,7 +183,8 @@ exec --no-startup-id $Locker -c 000000
 exec --no-startup-id xautolock -corners 0-00 -cornersize 150 -time 10 -locker "$Locker"
 
 # startup
-exec_always --no-startup-id ~/bin/startup-i3
+exec --no-startup-id ~/bin/startup-i3
+exec --no-startup-id $XDG_CONFIG_HOME/i3/wallpaper.sh
 
 # no title bars
 new_window pixel 1
