--- a/misc/.config/systemd/user/espanso.service.d/override.conf
+++ b/misc/.config/systemd/user/espanso.service.d/override.conf
@@ -1,6 +1,6 @@
 [Service]
 SyslogIdentifier=espanso
 ExecStart=
-ExecStart=/usr/bin/bash -c "until pgrep -f startup-i3; do sleep 1; done; exec -a espanso /usr/bin/espanso launcher"
+ExecStart=/usr/bin/bash -c "until pgrep -f i3-startup; do sleep 1; done; exec -a espanso /usr/bin/espanso launcher"
 ExecStartPre=/usr/bin/find %h/.config/espanso/match -name "tomb_*" -xtype l -delete
 Environment="PATH=%h/bin:/usr/local/bin:/:/usr/bin"
