--- a/gnupg/.local/share/gnupg/gpg-agent.conf
+++ b/gnupg/.local/share/gnupg/gpg-agent.conf
@@ -1,4 +1,5 @@
 enable-ssh-support
+no-allow-external-cache
 pinentry-program /usr/bin/pinentry-gnome3
 default-cache-ttl 180000
 max-cache-ttl 864000
