--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -105,6 +105,7 @@ bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -115,6 +116,7 @@ bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
 
 # move the current workspace to the next output
 bindsym $mod+x move workspace to output right
