--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -6,7 +6,7 @@ set -g history-limit 100000
 
 # improve colors
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color:RGB"
+set -ga terminal-overrides ",*alacritty:RGB"
 
 # terminator like window splits
 bind e split-window -h -c '#{pane_current_path}'
