fix tmux config reload

--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -30,7 +30,7 @@ set -g set-titles-string "tmux #S:#W"
 
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 # kill pane without confirmation
 bind w kill-pane
