--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -64,8 +64,8 @@ bind b set-window-option synchronize-panes
 bind C-b set-window-option synchronize-panes
 
 # zoom / search
-#bind -n M-\; resize-pane -Z
 bind-key / copy-mode \; send-key ?
+bind-key -n C-] copy-mode
 
 # renaming
 bind-key , command-prompt "rename-window '%%'"
@@ -79,6 +79,17 @@ set -g escape-time 0
 set -g mouse on
 setw -g mode-keys vi
 setw -g xterm-keys on
+
+# H/L for beginning/end of line
+bind -T copy-mode-vi 'H' send -X start-of-line
+bind -T copy-mode-vi 'L' send -X end-of-line
+
+# more vim-like selections
+unbind-key -T copy-mode-vi v
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X run-shell -d 0.3 \; send-keys -X copy-pipe-and-cancel
+bind -T copy-mode-vi 'Y' send-keys -X select-line \; run-shell -d 0.3 \; send-keys -X copy-pipe-and-cancel
+bind -T copy-mode-vi 'C-q' send -X rectangle-toggle
 
 # COLOUR (base16)
 
