rust: turn off the custom linkers for now

--- a/devel/.local/share/cargo/config
+++ b/devel/.local/share/cargo/config
@@ -1,19 +1,20 @@
 [build]
 rustc-wrapper = "sccache"
 
-[target.x86_64-unknown-linux-gnu]
-linker = "/usr/bin/clang"
-rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold", "-C", "target-cpu=native"]
+# for custom linker support (clang/mold)
+# [target.x86_64-unknown-linux-gnu]
+# linker = "/usr/bin/clang"
+# rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold", "-C", "target-cpu=native"]
 
 # cross compiling for linux@android
 [target.armv7-unknown-linux-musleabihf]
 linker = "rust-lld"
 
 # for statically linked glibc
-#rustflags = ["-C", "target-feature=+crt-static"]
+# rustflags = ["-C", "target-feature=+crt-static"]
 
 # using rust-lld as the linker
-#rustflags = ["-C", "link-args=-fuse-ld=lld"]
+# rustflags = ["-C", "link-args=-fuse-ld=lld"]
 
 # targeting native CPU extensions
-#rustflags = ["-C", "target-cpu=native"]
+# rustflags = ["-C", "target-cpu=native"]
