feat: vendor zsh-vi-mode to get 'H/L' line nav

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "_vendor/autoenv"]
 	path = _vendor/autoenv
 	url = https://github.com/zpm-zsh/autoenv
+[submodule "_vendor/zsh-vi-mode"]
+	path = _vendor/zsh-vi-mode
+	url = https://github.com/rarescosma/env.zsh-vi-mode.git
