--- a/devel/.config/git/config
+++ b/devel/.config/git/config
@@ -54,3 +54,8 @@
     helper = /usr/lib/git-core/git-credential-libsecret
 [safe]
     directory = /etc
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
