--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -23,7 +23,7 @@ smart_borders on
 
 # terminals
 bindsym $mod+Return exec alacritty
-bindsym $mod+0x60 exec alacritty -e sh -c "tmux attach -d -t base || exec tmux new -s base"
+bindsym $mod+0x60 exec alacritty -e tmux new-session -A -D -s base
 bindsym $mod+0x27 exec --no-startup-id raiseorlaunch -c obsidian -e obsidian
 bindsym $mod+p exec --no-startup-id $HOME/src/pkm/link_page.py
 bindsym $mod+Shift+0x27 exec --no-startup-id raiseorlaunch -c zotero
