--- a/devel/.local/share/cargo/config
+++ b/devel/.local/share/cargo/config
@@ -2,9 +2,9 @@
 rustc-wrapper = "sccache"
 
 # for custom linker support (clang/mold)
-# [target.x86_64-unknown-linux-gnu]
-# linker = "/usr/bin/clang"
-# rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold", "-C", "target-cpu=native"]
+[target.aarch64-unknown-linux-gnu]
+linker = "/usr/bin/clang"
+rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold", "-C", "target-cpu=native", "--cfg", "tokio_unstable", "--cfg", "uuid_unstable"]
 
 # cross compiling for linux@android
 [target.armv7-unknown-linux-musleabihf]
