--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -193,6 +193,9 @@ exec --no-startup-id ~/bin/i3-startup
 # no title bars
 new_window pixel 1
 
+# quick lock
+bindsym XF86Tools exec --no-startup-id $Locker
+
 # brightness controls
 bindsym XF86MonBrightnessUp exec ~/bin/lux -a10%
 bindsym XF86MonBrightnessDown exec ~/bin/lux -s10%
