git: push to github using SSH

--- a/devel/.config/git/config
+++ b/devel/.config/git/config
@@ -56,3 +56,5 @@
     smudge = git-lfs smudge -- %f
     process = git-lfs filter-process
     required = true
+[url "ssh://git@github.com/"]
+    pushInsteadOf = https://github.com/
