--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -190,6 +190,9 @@ exec --no-startup-id xautolock -corners 0-00 -cornersize 150 -time 10 -locker "$
 # startup
 exec --no-startup-id ~/bin/i3-startup
 
+# polkit
+exec --no-startup-id /usr/lib/xfce-polkit/xfce-polkit
+
 # no title bars
 new_window pixel 1
 
