--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -159,8 +159,10 @@ bar {
 
     output eDP1
     output eDP-1-1
-    output DP1
-    output DP2
+    output eDP-1-2
+    output DP-0
+    output DP-1
+    output DP-2
     output HDMI2
     output Virtual-1
 
