--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -190,7 +190,7 @@ exec --no-startup-id $Locker -c 000000
 exec --no-startup-id xautolock -corners 0-00 -cornersize 150 -time 10 -locker "$Locker"
 
 # startup
-exec --no-startup-id ~/bin/i3-startup
+exec --no-startup-id systemctl --user import-environment && systemctl --user start i3-startup.service
 
 # polkit
 exec --no-startup-id /usr/lib/xfce-polkit/xfce-polkit
@@ -231,7 +231,7 @@ bindsym Shift+XF86LaunchA exec "~/bin/screenshot-obsidian"
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
-    bindsym e exec --no-startup-id i3-msg exit, mode "default"
+    bindsym e exec --no-startup-id systemctl --user stop i3-startup.service && i3-msg exit, mode "default"
     bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
