gpg: set new default key

--- a/gnupg/.local/share/gnupg/gpg.conf
+++ b/gnupg/.local/share/gnupg/gpg.conf
@@ -11,7 +11,7 @@ with-fingerprint
 with-wkd-hash
 fingerprint
 
-default-key 0xDE1CC78657141B46
+default-key 0xB36842BFB2F1EBA8
 
 keyserver hkps://keyserver.ubuntu.com
 keyserver-options auto-key-retrieve
