--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -153,10 +153,10 @@ bindsym $mod+Ctrl+l resize grow width 1 px or 1 ppt
 
 # i3blocks / i3bar
 bar {
-    i3bar_command i3bar -t
     font "Font Awesome 6 Free"
     font "pango:Iosevka Fixed Semibold 8"
     status_command tendril -c c6cbd8 aio -j
+    i3bar_command i3bar
 
     output eDP1
     output eDP-1-1
