--- a/devel/.config/git/config
+++ b/devel/.config/git/config
@@ -43,7 +43,7 @@
 [user]
     name = Rareș Cosma
     email = rares@getbetter.ro
-    signingkey = 0xB36842BFB2F1EBA8
+    signingkey = 0x3165D112493D1556
     useConfigOnly = true
 [pull]
     ff = only
