--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -191,7 +191,7 @@ exec --no-startup-id $Locker -c 000000
 exec --no-startup-id xautolock -corners 0-00 -cornersize 150 -time 10 -locker "$Locker"
 
 # startup
-exec --no-startup-id systemctl --user import-environment && systemctl --user start i3-startup.service
+exec --no-startup-id systemctl --user start i3-startup.service
 
 # polkit
 exec --no-startup-id /usr/lib/xfce-polkit/xfce-polkit
