--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -25,7 +25,7 @@ set -g renumber-windows on
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
-set -g status-right ''
+set -g status-right "|#{client_width}|"
 
 # set title
 set -g set-titles on
