mpv: adopt changes (home + end binds for prev/next file)

--- a/misc/.config/mpv/mpv.conf
+++ b/misc/.config/mpv/mpv.conf
@@ -1,7 +1,11 @@
-vo=gpu
-gpu-api=vulkan
-hwdec=nvdec
+hwdec=auto-safe
 msg-level=all=v
 ytdl-format="bestvideo[height<=?1080][vcodec!^=vp]+bestaudio"
 sub-auto=all
 slang=en
+
+# other options for decoding
+#hwdec=no
+#hwdec=vulkan-copy
+#gpu-api=vulkan
+#vo=gpu
