fonts: that time of the year

--- a/_arch/usr/lib/firefox/mozilla.cfg
+++ b/_arch/usr/lib/firefox/mozilla.cfg
@@ -32,7 +32,7 @@ lockPref("dom.security.unexpected_system_load_telemetry_enabled", false);
 lockPref("extensions.activeThemeID", "firefox-compact-dark@mozilla.org");
 lockPref("extensions.ui.dictionary.hidden", true);
 lockPref("extensions.ui.locale.hidden", true);
-lockPref("font.name.monospace.x-western", "Iosevka");
+lockPref("font.name.monospace.x-western", "IosevkaRar Nerd Font Propo");
 lockPref("gfx.webrender.all", true);
 lockPref("gfx.x11-egl.force-enabled", true);
 lockPref("media.eme.enabled", false);
