--- a/wm/.config/fontconfig/fonts.conf
+++ b/wm/.config/fontconfig/fonts.conf
@@ -1,22 +1,223 @@
 <?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
+  <!--  Properly use default win fonts -->
   <alias binding="same">
+    <family>Helvetica</family>
+    <accept>
     <family>Arial</family>
-    <accept>
-      <family>Open Sans</family>
     </accept>
   </alias>
   <alias binding="same">
+    <family>Times</family>
+    <accept>
+    <family>Times New Roman</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>Courier</family>
+    <accept>
+    <family>Courier New</family>
+    </accept>
+  </alias>
+
+  <!-- Apply text rasterization, hinting, and anti-aliasing -->
+  <match target="font">
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="rgba" mode="assign">
+      <const>rgb</const>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintslight</const>
+    </edit>
+    <edit name="lcdfilter" mode="assign">
+      <const>lcddefault</const>
+    </edit>
+
+    <!-- Reject bitmap fonts in favour of Truetype, Postscript, etc. -->
+    <selectfont><rejectfont><pattern>
+        <patelt name="scalable"><bool>false</bool></patelt>
+    </pattern></rejectfont></selectfont>
+
+    <!-- Substitute truetype fonts for bitmap ones -->
+    <edit name="prefer_outline"><bool>true</bool></edit>
+
+    <!-- MS fonts use full hinting -->
+    <test name="family">
+        <string>Andale Mono</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Arial</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Arial Black</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Calibri</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Cambria</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Candara</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Comic Sans MS</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Consolas</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Constantia</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Corbel</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Courier New</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Georgia</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Impact</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Symbol</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Tahoma</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Times New Roman</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Trebuchet MS</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Verdana</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Webdings</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+    <test name="family">
+        <string>Wingdings</string>
+    </test>
+    <edit mode="assign" name="hintstyle">
+        <const>hintfull</const>
+    </edit>
+  </match>
+  <!-- Configure default fonts & fallback fonts -->
+  <!-- Replace fonts with preferred fonts -->
+  <!-- Noto Emoji allows for emojis to render in all apps including the terminal, remove if not needed  -->
+  <alias>
+    <family>serif</family>
+    <prefer>
+     <family>Noto Serif</family>
+     <family>Noto Color Emoji</family>
+     <family>Noto Emoji</family>
+    </prefer>
+  </alias>
+  <alias>
     <family>sans-serif</family>
-    <accept>
-      <family>Open Sans</family>
-    </accept>
+    <prefer>
+     <family>Noto Sans</family>
+     <family>Noto Color Emoji</family>
+     <family>Noto Emoji</family>
+    </prefer>
   </alias>
-  <alias binding="same">
-    <family>ui-monospace</family>
-    <accept>
-      <family>Iosevka</family>
-    </accept>
+  <alias>
+    <family>sans</family>
+    <prefer>
+     <family>Noto Sans</family>
+     <family>Noto Color Emoji</family>
+     <family>Noto Emoji</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>monospace</family>
+    <prefer>
+     <family>IosevkaRar Nerd Font Propo</family>
+     <family>Noto Color Emoji</family>
+     <family>Noto Emoji</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>Liberation Mono</family>
+    <prefer>
+     <family>IosevkaRar Nerd Font Propo</family>
+     <family>Noto Color Emoji</family>
+     <family>Noto Emoji</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>mono</family>
+    <prefer>
+     <family>IosevkaRar Nerd Font Propo</family>
+     <family>Noto Color Emoji</family>
+     <family>Noto Emoji</family>
+    </prefer>
   </alias>
 </fontconfig>
