--- a/wm/.config/fontconfig/fonts.conf
+++ b/wm/.config/fontconfig/fonts.conf
@@ -21,6 +21,13 @@
     </accept>
   </alias>
 
+  <match target="pattern">
+    <test name="family"><string>monospace</string></test>
+    <edit name="family" mode="assign" binding="strong">
+      <string>IosevkaRar Nerd Font Propo</string>
+    </edit>
+  </match>
+
   <!-- Apply text rasterization, hinting, and anti-aliasing -->
   <match target="font">
     <edit name="antialias" mode="assign">
