--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -183,7 +183,7 @@ bar {
 
 # locker
 set $Locker $XDG_CONFIG_HOME/i3/locker.sh
-exec --no-startup-id $Locker -c 000000
+exec --no-startup-id $Locker --start
 exec --no-startup-id xautolock -corners 0-00 -cornersize 150 -time 10 -locker "$Locker"
 
 # startup
